<resources>
    <string name="app_name">HouseWork4</string>
    <string name="monday_button">Monday</string>
    <string name="tuesday_button">Tuesday</string>
    <string name="wednesday_button">Wednesday</string>
    <string name="thursday_button">Thursday</string>
    <string name="friday_button">Friday</string>
    <string name="saturday_button">Saturday</string>
    <string name="sunday_button">Sunday</string>
    <string name="add_task_button">Add A Task</string>
    <string name="enter_name">Enter Task Name</string>
    <string name="enter_description">Enter Task Description</string>
    <string name="submit_task_button">Add New Task</string>
    <string name="delete_button">Delete Task</string>
    <string name="today_button">Today\'s Tasks</string>
    <string name="back_button">Back</string>
    <string name="delete_all_button">Delete for all days</string>
</resources>
