<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#bbdefb"
    tools:context="com.codeclan.housework4.AddTaskActivity">

    <EditText
        android:id="@+id/enter_name"
        android:hint="@string/enter_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="textShortMessage|textAutoCorrect|textCapSentences|textMultiLine"
        android:imeOptions="actionSend|flagNoEnterAction"
        android:maxLines="4"
        android:maxLength="2000"
        />

    <EditText
        android:id="@+id/enter_description"
        android:hint="@string/enter_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="textShortMessage|textAutoCorrect|textCapSentences|textMultiLine"
        android:imeOptions="actionSend|flagNoEnterAction"
        android:maxLines="4"
        android:maxLength="2000"/>

    <CheckBox
        android:id="@+id/monday_checkbox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/monday_button"
        android:textAppearance="?android:textAppearanceMedium" />

    <CheckBox
        android:id="@+id/tuesday_checkbox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/tuesday_button"
        android:textAppearance="?android:textAppearanceMedium" />

    <CheckBox
        android:id="@+id/wednesday_checkbox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/wednesday_button"
        android:textAppearance="?android:textAppearanceMedium" />

    <CheckBox
        android:id="@+id/thursday_checkbox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/thursday_button"
        android:textAppearance="?android:textAppearanceMedium" />

    <CheckBox
        android:id="@+id/friday_checkbox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/friday_button"
        android:textAppearance="?android:textAppearanceMedium" />

    <CheckBox
        android:id="@+id/saturday_checkbox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/saturday_button"
        android:textAppearance="?android:textAppearanceMedium" />

    <CheckBox
        android:id="@+id/sunday_checkbox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/sunday_button"
        android:textAppearance="?android:textAppearanceMedium" />

    <Button
        android:id="@+id/submit_task_button"
        android:text="@string/submit_task_button"
        android:textSize="34sp"
        android:layout_gravity="center"
        android:onClick="onSubmitTaskButtonClicked"
        android:background="@color/primaryRed"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />


</LinearLayout>